@@ -1,5 +1,7 @@
 #VERSION 0.8.5#
 
+ - added class Peak_Model_DataObject
+
  - deleted deprecated class Peak_View_Helper_Icon
  
  - rewrited method iniVar() from Peak_View to use Peak_Config_Ini.
